--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fun with Cards</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -40,6 +40,6 @@
         <p>&copy; 2024 Fun with Cards | Inspired by Sheldon Cooper's Fun with Flags</p>
     </footer>
 
-    <script src="../js/app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
